fixed a few spacing issues

--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -28,8 +28,7 @@
 
 
 .intro{
- padding-top: 60px;
- padding-bottom: 100px;  
+ padding-bottom: 80px;  
 }
 
 .about-content{
@@ -40,15 +39,12 @@
 }
 
 .contenthead{
-  margin-top: 60px;
+  margin-top: 10px;
   margin-bottom: 60px;
 }
 
 
 
-// .news-section{
-//   padding-top: 40px;
-// }
 
 .news-description{
   margin-top: 45px;
